Twelfth Commit: Fixed Error (static interface method invocations are not supported in -source 7)